fix(create): prevent overflow of svg background on create and select heroes page

--- a/app/style/global.scss
+++ b/app/style/global.scss
@@ -129,8 +129,11 @@ strong.white-text {
 }
 
 
-.height-100vh {
+.svg-full-screen-bg {
     height: 100vh;
+    position: absolute;
+    top: 0;
+    z-index: -10;
 }
 
 
